--- a/index.html
+++ b/index.html
@@ -4,6 +4,37 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/codeicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Ashish Nallana's developer portfolio showcasing his skills, experience and projects."
+    />
+    <meta
+      name="keywords"
+      content="Ashish Nallana,Ashish,Ashish Nallana  Portfolio, web developer portfolio,Nallana Ashish, React, TailwindCSS, DSA, Data Structures and Algorithms, programming tutorials, portfolio"
+    />
+    <meta name="author" content="Ashish Nallana" />
+    <meta property="og:title" content="Ashish Nallana's Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Ashish's web development portfolio. Learn about my skills and experience. View my projects and connect with me."
+    />
+    <meta
+      property="og:image"
+      content="https://ashishnallana.github.io/portfolio/assets/ashish-BIvEN9U0.jpeg"
+    />
+    <meta property="og:url" content="https://ashishnallana.github.io/" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:title" content="Ashish Nallana" />
+    <meta
+      name="twitter:description"
+      content="Let's stay calm, and see what life has to offer."
+    />
+    <meta
+      name="twitter:image"
+      content="https://pbs.twimg.com/profile_images/1786754488868417536/mvA1A_79_400x400.jpg"
+    />
+    <meta name="twitter:site" content="@AshishNallana" />
+    <link rel="canonical" href="https://yourportfolio.com" />
     <title>Ashish Nallana</title>
 
     <link
@@ -29,11 +60,8 @@
   </head>
   <body>
     <svg id="cursor_svg"></svg>
-
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-
-    <script src="./cursor.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
